# kv-cache-profiler

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  run_gpu_experiments.sh  sections_llama_models.md  test_basic.py  test_llama.py
.devcontainer/: Dockerfile  devcontainer.json
data/: exp1_concurrency_1756709735.csv  exp1_concurrency_1756709735.json  exp1_concurrency_1756711944.csv  exp1_concurrency_1756711944.json  exp1_concurrency_1757157752.csv  exp1_concurrency_1757157752.json  exp1_concurrency_1757157766.csv  exp1_concurrency_1757158197.csv  exp1_concurrency_1757158273.csv  exp1_concurrency_1757158273.json  exp1_concurrency_1757158309.csv  exp1_concurrency_1757158309.json  exp1_concurrency_1757158326.csv  exp1_concurrency_1757158326.json  exp1_concurrency_1757158428.csv  exp1_concurrency_1757158428.json  exp1_concurrency_1757158460.csv  exp1_concurrency_1757158460.json
data/fast_cpu_results/: exp1_concurrency_1757161408.csv  exp1_concurrency_1757161408.json  exp1_concurrency_1757162104.csv  exp1_concurrency_1757162104.json  exp1_concurrency_1757162392.csv  exp1_concurrency_1757162392.json
data/llama_demo/: exp1_concurrency_1757158356.csv  exp1_concurrency_1757158356.json
data/working_results/: exp1_concurrency_1757161557.csv  exp1_concurrency_1757161557.json
experiments/: exp1_concurrency.py  exp2_seqlen.py  exp3_mixed_batch.py
profiler/: __init__.py  cli.py  core.py  env.py  plots.py
profiler/backends/: __init__.py  hf.py
